Wed Jan 9 arton
 *ext/rjb.h
	add some ruby macros that defined after 1.8.6 for compatibility
	Change RBridge.class by 1.4.2
 *data/rjb/jp/co/infoseek/hp/arton/rjb/RBridge.class 
	compiled by 1.4.2 version of Java	
 *rjb.c
        mark version 1.1.2 for the next release.
Tue Dec 27 Kuwashima
 *test/Test.java
 *test/test.rb
 *ext/depend
 *ext/load.c
 *ext/extconf.rb
 *ext/rjbexception.c
 *ext/rjb.c
 *ext/riconv.c
 	change for compatibility with Ruby-1.9.0
Tue Nov 20 arton
 *rjb.c
	mark version 1.10.12 for next relase.
 *load.c
	omit useless double-quotations from JAVA_HOME, maybe specifies a longpathname (but useless).
Wed Nov 14 Kuwashima
 *rjb.c
 	add error check to constructor.
Fri Nov 9 arton
 *test.rb
 *Test.java
	add test for reproducing rjb-bugs-15430
 *rjb.c
	fix rjb-bugs-15430 that caused by bad array conversion.
	(generics method result signature is an object, but the real result is typed array)
 *riconv.c
	correct to get the number of array element.
Tue Oct 23 Kuwashima
 *riconv.c
	Change string encoding conversion rule.
Mon Oct 22 Kuwashima
 *riconv.c
 *riconv.h
	recycle iconv instance.
 *test/test.rb
	add cases for test_kjconv
Sun Sep 23 arton
 *rjb.c
	version 1.0.9
	convert to Ruby's type if Rjb::primitive_converion is enalbed and the result type is java.lang.Object
	support the object conversion for a bignum to long.
Sat Sep 15 arton
 *rjb.c
	version 1.0.8
	correction of 1.0.7, support long type.
Fri Sep 14 arton
 *rjb.c
	version 1.0.7
	add auto primitive conversion toggled by Rjb::primitive_conversion
 *test.rb
	add test_auto_conv
Sun Jun 17 arton
 *rjb.c
        add method aliases.
	setXxYy -> xx_yy=
	getXxYy -> xx_yy
	isXxYy  -> xx_yy?
	xxYyZz  -> xx_yy_zz
 *test.rb
	add a test for the method alias feature.
Tue Nov 21 arton
 *rjb.c
       Skip the constant registering process, if the constant was already defined. 
 *load.c
 *rjb.c
 *rjbexception.c
 *rjb.h	 
	add prefix 'rjb' for externed symbol names to avoid confliction.
	