@@ -5,6 +5,6 @@
 require 'rbconfig'
 
 if File.exist?(File.join(Config::CONFIG['sitearchdir'], 'rjb.so'))
-  File.delete(File.join(Config::CONFIG['sitearchdir'], 'rjb.so'))
+  File.delete(File.join(Config::CONFIG['sitearchdir'], 'rjbe.so'))
 end
 
